Fix issue with overlapping debug elements Remove further obsolete resources links & imports

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -23,6 +23,7 @@ div.debug {
     font-size: 0.75em;
     padding: 0.5em;
     width: initial;
+    max-width: 150px;
 }
 
 #alert-popup {
